Fixed layout issue on MapPage

--- a/modules/atlas/styles/legacy/_dashboard.scss
+++ b/modules/atlas/styles/legacy/_dashboard.scss
@@ -1,6 +1,8 @@
 $backdrop-color: rgba(0, 0, 0, 0.5);
 
 .c-dashboard {
+  display: flex;
+  flex-direction: column;
   height: 100%;
   background: $primary-light;
 
